Refactoring changes in response to Sonar reported issues.